--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time travelers</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'styles.css') }}">
 </head>
-<body>
+<body class="HomePage">
     <h1>🕰️ Welcome to, Time Traveler!</h1>
     <p>Ready to fix the time machine?</p>
     <form action="/play" method="get">
